# FractalGenerator

./: CMakeLists.txt
src/FractalGenerator/: Fractal.cpp  Fractal.h  FractalGenerator.cpp  FractalGenerator.h
src/FractalGenerator/Fractals/: FractalType.h  FractalTypes.cpp  FractalTypes.h  MandelbrotFractal.cpp  MandelbrotFractal.h
src/FractalViewer/: FractalViewer.cpp
